# louis

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  setup.sh
.github/workflows/: build-and-push-images.yml  build-bridge-gptr.yml  build-gpt-researcher-mcp.yml  build-litellm.yml  build-mcp-bridge.yml  build-mcpo-gptr.yml  build-open-webui.yml  k6.yml
AgenticSearch/: autogeneratedplan.md  framework_research.md  plan_vs_gptr_multiagent.md
backend/: requirements.txt
deployment/bridge-gptr/: .env.example  Dockerfile  README.md  config.json  docker-compose.yml  litellm.env.example  start.sh
deployment/gpt-researcher-mcp/: .env.example  Dockerfile  README.md
deployment/mcp-bridge/: Dockerfile  README.md  config.json
deployment/mcpo-gptr/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start.sh
deployment/mcpo-gptr/mcp-server-bing-search/: pyproject.toml
deployment/mcpo-proxy/: Dockerfile  README.md
deployment/multi-tool/: .dockerignore  Dockerfile  requirements.txt
deployment/openwebui/: version
gptr-graph/: gptr-graph.md
tests/k6/: test_chat-completion-az.js  test_chat-completion-local.js  test_chat-completions-stages-az.js  test_chat-completions-stages.js
