[project]
name = "mcpo-gptr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.103.1",
    "gpt-researcher>=0.12.16",
    "loguru>=0.7.0",
    "mcp[cli]>=1.6.0",
    "mcpo>=0.0.9",
    "pydantic>=2.3.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.23.2",
]
