[project]
name = "mcpo-gptr"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.103.1",
    "gpt-researcher>=0.12.16",
    "loguru>=0.7.0",
    "mcp[cli]>=1.6.0",
    "mcpo>=0.0.13",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.23.2",
    "httpx>=0.28,<1.0",
    "markitdown==0.1.1",
    "pendulum>=3.0,<4.0",
    "pydantic>=2.3.0",
    "tiktoken>=0.9.0,<1.0",
    "mcp-server-fetch>=2025.1.17",
    "mcp-server-time>=0.6.2",
    "markitdown-mcp>=0.0.1a3",
]
